# Data-structures-and-algorithms

lab1/: CMakeLists.txt  Stack.cpp  Stack.h  a.out  main.cpp
lab10/: Stack.h  Tree.h  lab10.cpp
lab11/: Stack.cpp  Tree.h  lab11.cpp
lab12/: TreeNode.h  lab12.cpp
lab13/: lab13.cpp
lab14/: lab14.cpp
lab15/: lab15.cpp
lab16/: main.cpp
lab17/: lab17.cpp
lab18/: lab18.cpp
lab2/: CMakeLists.txt  Queue.cpp  Queue.h  main.cpp
lab3/: CMakeLists.txt  DinamicQueue.cpp  DinamicQueue.h  main.cpp  main3lab.cpp
lab4/: CMakeLists.txt  StaticList.cpp  StaticList.h  main.cpp  main2.cpp
lab5/: CMakeLists.txt  ListOnArray.cpp  ListOnArray.h  main.cpp
lab6/: CMakeLists.txt  DynamicList.cpp  DynamicList.h  main.cpp
lab7/: CMakeLists.txt  ft_list.h  lab7.cpp
lab8/: CMakeLists.txt  lab8.cpp  listOfLIsts.h  listOfLists.cpp  main8.cpp
lab9/: Tree.h  input.txt  lab9.cpp
