cmake_minimum_required(VERSION 3.17)
project(lab7)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab7 lab7.cpp ft_list.h)

add_executable(lab8 ../lab8/lab8.cpp ../lab8/ft_list.h)

add_executable(lab9 ../lab9/lab9.cpp ../lab9/Tree.h)

add_executable(lab10 ../lab10/lab10.cpp ../lab10/Tree.h ../lab10/Stack.cpp ../lab10/Stack.h)